# MedAgent

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  agent.py  app.py  clinical_trials_api.py  embed_index.py  pyproject.toml  test.py
.github/workflows/: deploy.yml
chroma_db/: chroma.sqlite3
data/: medlineplus_drugs.csv
tools/: clinical_trial_tool.py  clinical_trials_api.py  drug_retrieval.py
utils/: ingest_embed.py  scrape.py
