[project]
name = "medagent"
version = "0.1.0"
description = "MedAgent Project"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    # Core agent stack
    "langchain>=1.1.3,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",

    # Gemini (API-key based)
    "langchain-google-genai>=4.0.0",

    # Vector + RAG
    "chromadb>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers>=5.2.0",

    # Search tool
    "ddgs>=9.9.3",

    # Runtime
    "streamlit>=1.52.1",
    "python-dotenv>=1.2.1",
    "pysqlite3-binary>=0.5.4.post2",

    # ML
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true